--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -7,4 +7,4 @@ Status: hidden
 Try returning to the [home page][home], or you can contact me at
 <internet@dominicrodger.com> if you think I've messed things up.
 
-[home]: http://www.dominicrodger.com
+[home]: http://www.dominicrodger.com "Go back to the home page of dominicrodger.com"
